# GaryDB

./: Cargo.toml  README.md
design/: purpose.md
src/: fsalloc.rs  lib.rs  raw.rs  raw.rs.old
